Creates sign in page

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -21,6 +21,10 @@ div {
 				width: 66%;
 				display: flex;
 				justify-content: space-between;
+
+				a {
+					color: #000;
+				}
 	
 				.logo {
 					margin-left: 20px;
