Improves home page design

--- a/src/styles/community.scss
+++ b/src/styles/community.scss
@@ -69,7 +69,7 @@
 		border-top-right-radius: 5px;
 		border-bottom-right-radius: 5px;
 		width: 90px;
-		background: #f8f800
+		background: #FF928B
 			url('https://media-exp1.licdn.com/dms/image/C4E03AQHq_-qD5z3szA/profile-displayphoto-shrink_800_800/0?e=1612396800&v=beta&t=Wve2NGD6UP3ho7DXng1K5fkDhAKXxZD2y5hAiLabnoU')
 			no-repeat 100% 100%;
 		background-size: 80% auto;
