--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -98,9 +98,9 @@ div {
 				}
 	
 				.signup_button {
-					background-color: #FA824C;
+					background-color: #384E77;
 					color: #fff;
-					border: 1px solid #FA824C;
+					border: 1px solid #384E77;
 				}
 			}
 		}
