--- a/src/styles/newsletter.scss
+++ b/src/styles/newsletter.scss
@@ -60,7 +60,7 @@
 			}
 	
 			.submit_button {
-				background-color: #FA824C;
+				background-color: #1B3B6F;
 				height: 34px;
 				padding: 0 13px;
 				color: #fff;
