--- a/src/styles/community.scss
+++ b/src/styles/community.scss
@@ -65,13 +65,23 @@
 		}
 	}
 
-	.background_image {
+	.background_image_article {
 		border-top-right-radius: 5px;
 		border-bottom-right-radius: 5px;
 		width: 90px;
 		background: #FF928B
 			url('https://media-exp1.licdn.com/dms/image/C4E03AQHq_-qD5z3szA/profile-displayphoto-shrink_800_800/0?e=1612396800&v=beta&t=Wve2NGD6UP3ho7DXng1K5fkDhAKXxZD2y5hAiLabnoU')
 			no-repeat 100% 100%;
+		background-size: 80% auto;
+		justify-content: center;
+	}
+
+	.background_image_book {
+		border-top-right-radius: 5px;
+		border-bottom-right-radius: 5px;
+		width: 90px;
+		background: #9CFFFA
+			url('https://mitpress.mit.edu/sites/default/files/styles/book_teaser_small/http/mitp-content-server.mit.edu%3A18180/books/covers/cover/%3Fcollid%3Dbooks_covers_0%26isbn%3D9780262539135%26type%3D.jpg?itok=g7OwnMAK') no-repeat 100% 100%;
 		background-size: 80% auto;
 		justify-content: center;
 	}
